Resolved layout problems in show

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -129,8 +129,8 @@
   top: 70px;
   width: 100%;
   z-index:10;
-  transition: all .6s ease-in-out;
-  -webkit-transition: all .6s ease-in-out;
+  // transition: all .6s ease-in-out;
+  // -webkit-transition: all .6s ease-in-out;
 }
 
 #divider.affix {
