--- a/app/assets/stylesheets/layout/_utilities.scss
+++ b/app/assets/stylesheets/layout/_utilities.scss
@@ -30,6 +30,11 @@
   padding-bottom: 40px;
 }
 
+.wrapper-white h2 {
+  margin-top: 11px;
+  margin-bottom: 11px;
+}
+
 .wrapper-white-lg {
   height: 300px;
 }
